once again requiring boot.init.php from functions.php

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,8 @@
       "url": "https://wpackagist.org"
     }
   ],
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "require": {
     "php": "^7.4 || ^8.0",
     "giggsey/libphonenumber-for-php": "^8.12",
@@ -44,6 +46,7 @@
     "filp/whoops": "^2.5",
     "friendsofphp/php-cs-fixer": "^2.15",
     "joshtronic/php-loremipsum": "^1.0",
+    "koodimonni/composer-dropin-installer": "^1.3",
     "leonidas/leonidas": "@stable",
     "maximebf/debugbar": "^1.17",
     "mockery/mockery": "^1.4",
@@ -84,6 +87,7 @@
     "collect": "vendor/bin/var-dump-server",
     "env": "cp -n .env.example .env",
     "fix": "vendor/bin/php-cs-fixer fix --verbose",
+    "hooks": "vendor/bin/captainhook",
     "inspect": "vendor/bin/psalm",
     "link": "bin/symlink-theme",
     "shell": "vendor/bin/psysh",
@@ -100,7 +104,7 @@
       "@inspect",
       "@test"
     ],
-    "wordpress": [
+    "wp:init": [
       "@wp core download",
       "@link"
     ],
@@ -110,9 +114,21 @@
       "@wp core install"
     ],
     "post-create-project-cmd": [
-      "@wordpress",
-      "bin/composer-prefill"
+      "@wp:init",
+      "bin/composer-prefill",
+      "@env"
     ]
+  },
+  "config": {
+    "optimize-autoloader": true,
+    "apcu-autoloader": true,
+    "sort-packages": true,
+    "process-timeout": 0,
+    "allow-plugins": {
+      "composer/installers": true,
+      "composer/package-versions-deprecated": true,
+      "koodimonni/composer-dropin-installer": true
+    }
   },
   "extra": {
     "installer-paths": {
@@ -124,13 +140,14 @@
       ],
       "wordpress/wp-content/themes/{$name}/": [
         "type:wordpress-theme"
+      ],
+      "vendor/{$vendor}/{$name}/": [
+        "type:wordpress-dropin"
       ]
+    },
+    "dropin-paths": {
+      "wordpress/wp-content/": [],
+      "wordpress/wp-content/mu-plugins": []
     }
-  },
-  "config": {
-    "sort-packages": true,
-    "process-timeout": 0
-  },
-  "minimum-stability": "dev",
-  "prefer-stable": true
+  }
 }
