--- a/composer.json
+++ b/composer.json
@@ -90,13 +90,13 @@
     "hooks": "vendor/bin/captainhook",
     "inspect": "vendor/bin/psalm",
     "link": "bin/symlink-theme",
-    "shell": "vendor/bin/psysh",
+    "shell": "@wp shell",
     "test:acceptance": "vendor/bin/phpunit --testsuite acceptance",
     "test:functional": "vendor/bin/phpunit --testsuite functional",
     "test:integration": "vendor/bin/phpunit --testsuite integration",
     "test:unit": "vendor/bin/phpunit --testsuite unit",
     "test:wpunit": "vendor/bin/phpunit --testsuite wpunit",
-    "watch": "vendor/bin/phpunit-watcher",
+    "watch": "vendor/bin/phpunit-watcher watch",
     "wp": "vendor/bin/wp",
     "build": [
       "@fix",
