testing roots/bud for asset compilation

--- a/assets/package.json
+++ b/assets/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "scripts": {
+    "bud": "bud",
     "dev": "npm run development",
     "development": "mix",
     "watch": "mix watch",
@@ -14,10 +15,21 @@
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/register": "^7.13.14",
+    "@roots/bud": "^5.0.0",
+    "@roots/bud-babel": "^5.0.0",
+    "@roots/bud-emotion": "^5.0.0",
+    "@roots/bud-entrypoints": "^5.0.0",
+    "@roots/bud-esbuild": "^5.0.0",
+    "@roots/bud-imagemin": "^5.0.0",
+    "@roots/bud-postcss": "^5.0.0",
+    "@roots/bud-react": "^5.0.0",
+    "@roots/bud-sass": "^5.0.0",
+    "@roots/bud-tailwindcss": "^5.0.0",
+    "@roots/bud-typescript": "^5.0.0",
+    "@roots/bud-vue": "^5.0.0",
     "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.1",
-    "html-webpack-theme": "^5.3.1",
     "laravel-mix": "^6.0.16",
     "lodash": "^4.17.21",
     "postcss": "^8.2.10",
@@ -27,7 +39,25 @@
     "style-loader": "^2.0.0",
     "webpack": "^5.32.0",
     "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^3.11.2",
-    "yargs": "^16.2.0"
+    "webpack-dev-server": "^4.7.1",
+    "yargs": "^16.2.0",
+    "imagemin-gifsicle": "7.0.0",
+    "imagemin-jpegtran": "7.0.0",
+    "imagemin-optipng": "8.0.0",
+    "imagemin-svgo": "10.0.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "@emotion/css": "11.7.1",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
+    "postcss-import": "14.0.2",
+    "postcss-nested": "5.0.6",
+    "postcss-preset-env": "7.0.2",
+    "tailwindcss": "3.0.7",
+    "@vue/compiler-sfc": "3.2.26",
+    "@vue/runtime-dom": "3.2.26",
+    "vue": "3.2.26",
+    "eslint": "^7",
+    "typescript": "^4"
   }
 }
