asset compilation with laravel mix

--- a/assets/package.json
+++ b/assets/package.json
@@ -2,19 +2,20 @@
   "private": true,
   "scripts": {
     "bud": "bud",
-    "dev": "npm run development",
-    "development": "mix",
+    "mix:dev": "mix",
+    "mix:prod": "mix --production",
     "watch": "mix watch",
     "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot",
-    "prod": "npm run production",
-    "production": "mix --production"
+    "hot": "mix watch --hot"
   },
   "devDependencies": {
     "@babel/cli": "^7.13.14",
     "@babel/core": "^7.13.15",
     "@babel/preset-env": "^7.13.15",
     "@babel/register": "^7.13.14",
+    "@emotion/css": "11.7.1",
+    "@emotion/react": "11.7.1",
+    "@emotion/styled": "11.6.0",
     "@roots/bud": "^5.0.0",
     "@roots/bud-babel": "^5.0.0",
     "@roots/bud-emotion": "^5.0.0",
@@ -27,37 +28,74 @@
     "@roots/bud-tailwindcss": "^5.0.0",
     "@roots/bud-typescript": "^5.0.0",
     "@roots/bud-vue": "^5.0.0",
-    "axios": "^0.21.1",
+    "@vue/compiler-sfc": "3.2.26",
+    "@vue/runtime-dom": "3.2.26",
     "babel-loader": "^8.2.2",
+    "browser-sync": "^2.27.7",
+    "browser-sync-webpack-plugin": "^2.3.0",
     "css-loader": "^5.2.1",
-    "laravel-mix": "^6.0.16",
-    "lodash": "^4.17.21",
-    "postcss": "^8.2.10",
-    "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "webpack": "^5.32.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.7.1",
-    "yargs": "^16.2.0",
+    "eslint": "^7",
     "imagemin-gifsicle": "7.0.0",
     "imagemin-jpegtran": "7.0.0",
     "imagemin-optipng": "8.0.0",
     "imagemin-svgo": "10.0.1",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "@emotion/css": "11.7.1",
-    "@emotion/react": "11.7.1",
-    "@emotion/styled": "11.6.0",
+    "laravel-mix": "^6.0.16",
+    "postcss": "^8.2.10",
     "postcss-import": "14.0.2",
     "postcss-nested": "5.0.6",
     "postcss-preset-env": "7.0.2",
+    "regenerator-runtime": "^0.13.9",
+    "resolve-url-loader": "^3.1.2",
+    "sass": "^1.32.8",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "tailwindcss": "3.0.7",
-    "@vue/compiler-sfc": "3.2.26",
-    "@vue/runtime-dom": "3.2.26",
-    "vue": "3.2.26",
-    "eslint": "^7",
-    "typescript": "^4"
+    "typescript": "^4",
+    "webpack": "^5.32.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^4.7.1",
+    "yargs": "^16.2.0"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.6.0",
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "@glidejs/glide": "^3.4.1",
+    "animate.css": "^3.7.2",
+    "aos": "^2.3.4",
+    "axios": "^0.21.1",
+    "badger-accordion": "^1.2.3",
+    "bootstrap": "^4.3.1",
+    "core-js": "^3.20.1",
+    "delete-empty": "^3.0.0",
+    "flag-icon-css": "^3.4.2",
+    "gsap": "^2.1.3",
+    "gulp-gzip": "^1.4.2",
+    "gulp-newer": "^1.4.0",
+    "hammerjs": "^2.0.8",
+    "handy-collapse": "^1.0.0",
+    "image-size": "^0.8.3",
+    "imagesloaded": "^4.1.4",
+    "jquery": "^3.4.1",
+    "leaflet": "^1.5.1",
+    "loaders.css": "^0.1.2",
+    "lodash": "^4.17.21",
+    "magic.css": "^1.4.1",
+    "masonry-layout": "^4.2.2",
+    "mediaelement": "^4.2.12",
+    "overlayscrollbars": "^1.10.0",
+    "owl.carousel": "^2.3.4",
+    "parallax-js": "^3.1.0",
+    "popper.js": "^1.16.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "rellax": "^1.10.0",
+    "rfs": "^9.0.0",
+    "scroll-out": "^2.2.7",
+    "simplebar": "^4.2.3",
+    "slideout": "^1.0.1",
+    "sweetalert": "^2.1.2",
+    "swiper": "^4.5.1",
+    "tooltip.js": "^1.3.3",
+    "vue": "3.2.26"
   }
 }
