--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_script:
   - composer dumpautoload
 
 script:
-  - vendor/bin/phpcs --standard=phpcs.xml.dist src
+  - vendor/bin/phpcs --standard=phpcs.xml.dist app
   - vendor/bin/phpunit --configuration phpunit.xml.dist
 
 after_script:
