--- a/__prefill__/composer.json
+++ b/__prefill__/composer.json
@@ -19,7 +19,7 @@
   ],
   "autoload": {
     "psr-4": {
-      "PseudoVendor\\PseudoTheme\\": "src/"
+      "PseudoVendor\\PseudoTheme\\": "app/"
     }
   }
 }
