restructured theme sass using 7-1 architecture

--- a/assets/package.json
+++ b/assets/package.json
@@ -7,96 +7,82 @@
     "mix:dev": "mix",
     "mix:prod": "mix --production",
     "watch": "mix watch",
-    "watch-poll": "mix watch -- --watch-options-poll=1000",
-    "hot": "mix watch --hot"
+    "watch:poll": "mix watch -- --watch-options-poll=1000",
+    "watch:hot": "mix watch --hot",
+    "debug:sass:admin": "sass src/admin/scss/main.scss temp/admin/main.scss",
+    "debug:sass:editor": "sass src/editor/scss/main.scss temp/editor/main.scss",
+    "debug:sass:theme": "sass src/theme/scss/main.scss temp/theme/main.scss"
   },
   "devDependencies": {
-    "@babel/cli": "^7.13.14",
-    "@babel/core": "^7.13.15",
-    "@babel/preset-env": "^7.13.15",
-    "@babel/register": "^7.13.14",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
+    "@babel/register": "^7.16.5",
     "@emotion/css": "11.7.1",
     "@emotion/react": "11.7.1",
     "@emotion/styled": "11.6.0",
-    "@roots/bud": "^5.0.0",
-    "@roots/bud-babel": "^5.0.0",
-    "@roots/bud-emotion": "^5.0.0",
-    "@roots/bud-entrypoints": "^5.0.0",
-    "@roots/bud-esbuild": "^5.0.0",
-    "@roots/bud-imagemin": "^5.0.0",
-    "@roots/bud-postcss": "^5.0.0",
-    "@roots/bud-react": "^5.0.0",
-    "@roots/bud-sass": "^5.0.0",
-    "@roots/bud-tailwindcss": "^5.0.0",
-    "@roots/bud-typescript": "^5.0.0",
-    "@roots/bud-vue": "^5.0.0",
     "@vue/compiler-sfc": "3.2.26",
     "@vue/runtime-dom": "3.2.26",
-    "babel-loader": "^8.2.2",
+    "babel-loader": "^8.2.3",
     "browser-sync": "^2.27.7",
     "browser-sync-webpack-plugin": "^2.3.0",
-    "css-loader": "^5.2.1",
-    "eslint": "^7",
-    "imagemin-gifsicle": "7.0.0",
-    "imagemin-jpegtran": "7.0.0",
-    "imagemin-optipng": "8.0.0",
-    "imagemin-svgo": "10.0.1",
-    "laravel-mix": "^6.0.16",
-    "postcss": "^8.2.10",
+    "css-loader": "^6.5.1",
+    "eslint": "^8",
+    "image-size": "^1.0.0",
+    "laravel-mix": "^6.0.39",
+    "node-sass": "^7.0.1",
+    "postcss": "^8.4.5",
     "postcss-import": "14.0.2",
     "postcss-nested": "5.0.6",
-    "postcss-preset-env": "7.0.2",
+    "postcss-preset-env": "7.1.0",
     "regenerator-runtime": "^0.13.9",
-    "resolve-url-loader": "^3.1.2",
-    "sass": "^1.32.8",
-    "sass-loader": "^11.0.1",
-    "style-loader": "^2.0.0",
-    "tailwindcss": "3.0.7",
+    "resolve-url-loader": "^4.0.0",
+    "sass": "^1.45.1",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "tailwindcss": "3.0.8",
     "typescript": "^4",
-    "webpack": "^5.32.0",
-    "webpack-cli": "^4.6.0",
-    "webpack-dev-server": "^4.7.1",
-    "yargs": "^16.2.0"
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.2",
+    "yargs": "^17.3.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
-    "@fortawesome/fontawesome-free": "^5.11.2",
-    "@glidejs/glide": "^3.4.1",
-    "animate.css": "^3.7.2",
-    "aos": "^2.3.4",
-    "axios": "^0.21.1",
-    "badger-accordion": "^1.2.3",
-    "bootstrap": "^4.3.1",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@glidejs/glide": "^3.5",
+    "animate.css": "^4.1",
+    "aos": "^2.3",
+    "axios": "^0.24.0",
+    "badger-accordion": "^1.2.4",
+    "bootstrap": "^5.1",
     "core-js": "^3.20.1",
     "delete-empty": "^3.0.0",
     "flag-icon-css": "^3.4.2",
-    "gsap": "^2.1.3",
-    "gulp-gzip": "^1.4.2",
-    "gulp-newer": "^1.4.0",
+    "gsap": "^3.9.1",
     "hammerjs": "^2.0.8",
-    "handy-collapse": "^1.0.0",
-    "image-size": "^0.8.3",
+    "handy-collapse": "^1.0.4",
     "imagesloaded": "^4.1.4",
-    "jquery": "^3.4.1",
-    "leaflet": "^1.5.1",
+    "jquery": "^3.6.0",
+    "leaflet": "^1.7.1",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.21",
-    "magic.css": "^1.4.1",
+    "magic.css": "^1.4",
     "masonry-layout": "^4.2.2",
-    "mediaelement": "^4.2.12",
-    "overlayscrollbars": "^1.10.0",
+    "mediaelement": "^5.0.4",
+    "overlayscrollbars": "^1.13.1",
     "owl.carousel": "^2.3.4",
     "parallax-js": "^3.1.0",
     "popper.js": "^1.16.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "rellax": "^1.10.0",
-    "rfs": "^9.0.0",
-    "scroll-out": "^2.2.7",
-    "simplebar": "^4.2.3",
+    "rellax": "^1.12.1",
+    "rfs": "^9.0.6",
+    "scroll-out": "^2.2.12",
+    "simplebar": "^5.3.6",
     "slideout": "^1.0.1",
     "sweetalert": "^2.1.2",
-    "swiper": "^4.5.1",
+    "swiper": "^7.4.1",
     "tooltip.js": "^1.3.3",
     "vue": "3.2.26"
   }
