--- a/composer.json
+++ b/composer.json
@@ -37,22 +37,20 @@
     "webtheory/config": "@stable",
     "webtheory/context": "@stable",
     "webtheory/facade": "@stable",
+    "voku/stringy": "^6.4",
     "webtheory/html": "@stable",
     "webtheory/saveyour": "@stable"
   },
   "require-dev": {
     "composer/installers": "^1.0 || ^2.0",
     "fakerphp/faker": "^1.17",
-    "filp/whoops": "^2.5",
     "friendsofphp/php-cs-fixer": "^3.4",
     "joshtronic/php-loremipsum": "^1.0",
     "koodimonni/composer-dropin-installer": "^1.3",
     "leonidas/leonidas": "@stable",
     "maximebf/debugbar": "^1.17",
     "mockery/mockery": "^1.4",
-    "monolog/monolog": "^2.0",
     "nesbot/carbon": "^2.46",
-    "nunomaduro/collision": "^5.10",
     "oscarotero/env": "^2.1",
     "phpbench/phpbench": "@dev",
     "phpunit/phpunit": "^9.5",
@@ -60,16 +58,13 @@
     "psy/psysh": "^0.10.7",
     "spatie/phpunit-watcher": "^1.12",
     "squizlabs/php_codesniffer": "^3.0",
-    "symfony/var-dumper": "^5.4",
     "vimeo/psalm": "^4.7",
     "vlucas/phpdotenv": "^5.3",
-    "voku/stringy": "^6.4",
     "webtheory/exterminate": "@stable",
     "webtheory/wp-cli-util": "@stable",
     "webtheory/wpdmc": "@stable",
     "webtheory/wpunit": "@stable",
-    "wp-cli/wp-cli-bundle": "@stable",
-    "wpackagist-theme/twentytwentyone": "@stable"
+    "wp-cli/wp-cli-bundle": "@stable"
   },
   "autoload": {
     "psr-4": {
@@ -107,6 +102,13 @@
       "@inspect",
       "@test"
     ],
+    "setup": [
+      "@install",
+      "@env",
+      "@asset install",
+      "@asset mix:dev",
+      "@wp:init"
+    ],
     "test": [
       "@test:unit",
       "@test:wpunit",
@@ -124,9 +126,9 @@
       "@wp core install"
     ],
     "post-create-project-cmd": [
-      "@wp:init",
       "bin/composer-prefill",
-      "@env"
+      "@env",
+      "@wp:init"
     ]
   },
   "config": {
@@ -141,6 +143,19 @@
     }
   },
   "extra": {
+    "build-paths": {
+      "build": {
+        "phpunit": {},
+        "php-cs-fixer": {},
+        "wordpress": {}
+      },
+      "logs": {},
+      "temp": {}
+    },
+    "dropin-paths": {
+      "wordpress/wp-content/": [],
+      "wordpress/wp-content/mu-plugins": []
+    },
     "installer-paths": {
       "wordpress/wp-content/plugins/{$name}": [
         "type:wordpress-plugin"
@@ -154,10 +169,6 @@
       "vendor/{$vendor}/{$name}/": [
         "type:wordpress-dropin"
       ]
-    },
-    "dropin-paths": {
-      "wordpress/wp-content/": [],
-      "wordpress/wp-content/mu-plugins": []
     }
   }
 }
