new config files for asset build

--- a/assets/package.json
+++ b/assets/package.json
@@ -4,7 +4,7 @@
     "build": "npm run lint && npm run test && npm run mix:prod",
     "lint": "",
     "test": "",
-    "mix:dev": "mix",
+    "mix": "mix",
     "mix:prod": "mix --production",
     "watch": "mix watch",
     "watch:poll": "mix watch -- --watch-options-poll=1000",
