updated build boilerplate

--- a/composer.json
+++ b/composer.json
@@ -27,10 +27,10 @@
   "require": {
     "php": "^7.4 || ^8.0",
     "giggsey/libphonenumber-for-php": "^8.12",
-    "guzzlehttp/psr7": "^1.6",
+    "guzzlehttp/psr7": "^2.1",
     "league/container": "^4.2",
     "psr/container": "^1.1",
-    "symfony/asset": "^4.3",
+    "symfony/asset": "^5.4",
     "symfony/polyfill-php80": "^1.23",
     "symfony/polyfill-php81": "^1.23",
     "timber/timber": "^1.19",
@@ -54,7 +54,7 @@
     "phpbench/phpbench": "@dev",
     "phpunit/phpunit": "^9.5",
     "phpunit/phpunit-selenium": "^9.0",
-    "psy/psysh": "^0.10.7",
+    "psy/psysh": "^0.11",
     "spatie/phpunit-watcher": "^1.12",
     "squizlabs/php_codesniffer": "^3.0",
     "symfony/thanks": "^1.2",
@@ -82,8 +82,9 @@
     "check": "vendor/bin/phpcs",
     "collect": "vendor/bin/var-dump-server",
     "env": "cp -n .env.example .env && bin/build-paths",
+    "export": "git archive --output=./build/archive.zip --format=zip HEAD",
     "fix": "vendor/bin/phpcbf",
-    "fix:alt": "vendor/bin/php-cs-fixer fix --verbose",
+    "style": "vendor/bin/php-cs-fixer fix --verbose",
     "hooks": "vendor/bin/captainhook",
     "inspect": "vendor/bin/psalm",
     "link": "bin/symlink-theme",
@@ -136,6 +137,7 @@
   "config": {
     "optimize-autoloader": true,
     "apcu-autoloader": false,
+    "preferred-install": "dist",
     "sort-packages": true,
     "process-timeout": 0,
     "allow-plugins": {
