updated all npm packages to latest major version

--- a/assets/package.json
+++ b/assets/package.json
@@ -6,85 +6,88 @@
     "test": "",
     "mix": "mix",
     "mix:prod": "mix --production",
+    "nuke": "rm package-lock.json && rm -rf node_modules",
+    "style": "npx prettier",
     "watch": "mix watch",
     "watch:poll": "mix watch -- --watch-options-poll=1000",
     "watch:hot": "mix watch --hot",
-    "debug:sass:admin": "sass src/admin/scss/main.scss build/sass/admin/main.scss",
-    "debug:sass:editor": "sass src/editor/scss/main.scss build/sass/editor/main.scss",
-    "debug:sass:theme": "sass src/theme/scss/main.scss build/sass/theme/main.scss"
+    "debug.sass:admin": "sass src/admin/scss/main.scss build/sass/admin/main.scss",
+    "debug.sass:editor": "sass src/editor/scss/main.scss build/sass/editor/main.scss",
+    "debug.sass:theme": "sass src/theme/scss/main.scss build/sass/theme/main.scss"
   },
   "devDependencies": {
-    "@babel/cli": "^7.16.0",
-    "@babel/core": "^7.16.5",
-    "@babel/preset-env": "^7.16.5",
-    "@babel/register": "^7.16.5",
-    "@emotion/css": "11.7.1",
-    "@emotion/react": "11.7.1",
-    "@emotion/styled": "11.6.0",
-    "@vue/compiler-sfc": "3.2.26",
-    "@vue/runtime-dom": "3.2.26",
-    "babel-loader": "^8.2.3",
-    "browser-sync": "^2.27.7",
+    "@babel/cli": "^7.18.9",
+    "@babel/core": "^7.18.9",
+    "@babel/preset-env": "^7.18.9",
+    "@babel/register": "^7.18.9",
+    "@emotion/css": "11.9.0",
+    "@emotion/react": "11.9.3",
+    "@emotion/styled": "11.9.3",
+    "@vue/compiler-sfc": "3.2.37",
+    "@vue/runtime-dom": "3.2.37",
+    "babel-loader": "^8.2.5",
+    "browser-sync": "^2.27.10",
     "browser-sync-webpack-plugin": "^2.3.0",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.7.1",
     "eslint": "^8",
-    "image-size": "^1.0.0",
-    "laravel-mix": "^6.0.39",
-    "node-sass": "^7.0.1",
-    "postcss": "^8.4.5",
-    "postcss-import": "14.0.2",
+    "image-size": "^1.0.2",
+    "laravel-mix": "^6.0.49",
+    "prettier": "^2.7.1",
+    "postcss": "^8.4.14",
+    "postcss-import": "14.1.0",
     "postcss-nested": "5.0.6",
-    "postcss-preset-env": "7.1.0",
+    "postcss-preset-env": "7.7.2",
     "regenerator-runtime": "^0.13.9",
-    "resolve-url-loader": "^4.0.0",
-    "sass": "^1.45.1",
-    "sass-loader": "^12.4.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.54.0",
+    "sass-loader": "^13.0.2",
     "style-loader": "^3.3.1",
-    "typescript": "^4",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.7.2",
-    "yargs": "^17.3.1"
+    "typescript": "^4.7.4",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.9.3",
+    "yargs": "^17.5.1"
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
-    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-free": "^6.1.2",
     "@glidejs/glide": "^3.5",
     "animate.css": "^4.1",
     "aos": "^2.3",
-    "axios": "^0.24.0",
+    "axios": "^0.27.2",
     "badger-accordion": "^1.2.4",
-    "bootstrap": "^5.1",
-    "core-js": "^3.20.1",
+    "bootstrap": "5.2",
+    "core-js": "^3.24.0",
     "delete-empty": "^3.0.0",
     "flag-icon-css": "^3.4.2",
-    "gsap": "^3.9.1",
+    "fslightbox": "^3.3.1",
+    "gsap": "^3.10.4",
     "hammerjs": "^2.0.8",
     "handy-collapse": "^1.0.4",
-    "imagesloaded": "^4.1.4",
+    "imagesloaded": "^5.0.0",
     "jquery": "^3.6.0",
-    "leaflet": "^1.7.1",
+    "leaflet": "^1.8.0",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.21",
     "magic.css": "^1.4",
     "masonry-layout": "^4.2.2",
-    "mediaelement": "^5.0.4",
-    "overlayscrollbars": "^1.13.1",
+    "mediaelement": "^5.0.5",
+    "overlayscrollbars": "^1.13.3",
     "owl.carousel": "^2.3.4",
     "parallax-js": "^3.1.0",
     "popper.js": "^1.16.0",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "rellax": "^1.12.1",
     "rfs": "^9.0.6",
     "scroll-out": "^2.2.12",
-    "simplebar": "^5.3.6",
+    "simplebar": "^5.3.8",
     "slideout": "^1.0.1",
     "sweetalert": "^2.1.2",
-    "swiper": "^7.4.1",
-    "tailwindcss": "3.0.8",
+    "swiper": "^8.3.1",
+    "tailwindcss": "3.1.6",
     "tooltip.js": "^1.3.3",
-    "vue": "3.2.26",
+    "vue": "3.2.37",
     "wpapi": "^1.2.2"
   }
 }
