--- a/assets/tsconfig.json
+++ b/assets/tsconfig.json
@@ -1,11 +1,7 @@
 {
+  "include": ["src/*/ts/**/*"],
+  "exclude": ["node_modules"],
   "compilerOptions": {
-    "baseUrl": "./src",
-    "paths": {
-      "@scripts/*": ["scripts/*"],
-      "@styles/*": ["styles/*"]
-    },
-    "outDir": "./public",
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
@@ -17,7 +13,5 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "jsx": "preserve"
-  },
-  "include": ["src/*/ts/**/*"],
-  "exclude": ["node_modules"]
+  }
 }
