updated and applied asset prettier config

--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,8 @@
     "mix": "mix",
     "mix:prod": "mix --production",
     "nuke": "rm package-lock.json && rm -rf node_modules",
-    "style": "npx prettier",
+    "prettier": "npx prettier . --write --cache",
+    "prettier:c": "npx prettier . --check --cache",
     "watch": "mix watch",
     "watch:poll": "mix watch -- --watch-options-poll=1000",
     "watch:hot": "mix watch --hot",
