build overhall including addition of docker, pathagist, phpcs enhancements, unit-utils, etc

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,34 @@
-# Database
-DB_NAME=
-DB_USER=
-DB_PASSWORD=
-DB_HOST=
+# Server
+SERVER_NAME=localhost
+SERVER_PORT=80
+DOMAIN_NAME="${SERVER_NAME}:${SERVER_PORT}"
 
 # WordPress
-WP_HOME=http://pseudo-theme.test
+WP_HOME="http://${DOMAIN_NAME}"
 WP_ENVIRONMENT_TYPE=development
+
+# Database
+DB_FORWARD_PORT=3306
+DB_HOST=database
+DB_NAME=app
+DB_USER=user
+DB_PASSWORD=password
+
+# Cache
+CACHE_FORWARD_PORT=6379
+
+# Selenium
+SELENIUM_HOST=selenuim
 
 # Debugging
 DEBUG_ENABLE=true
 DEBUG_DISPLAY=true
 DEBUG_EDITOR=vscode
-
-# Var Dumper
 VAR_DUMP_THEME=dark
 
 # System
-HOST_OS=null
-HOST_PATH=
-GUEST_PATH=
-
-# Misc
-SHOW_ADMIN_BAR=false
+HOST_UID=1000
+HOST_GID=1000
+HOST_OS=LINUX
+HOST_PATH=~/code/packages/leonidas
+GUEST_PATH=/var/www/html
