--- a/composer.json
+++ b/composer.json
@@ -25,58 +25,67 @@
   "minimum-stability": "dev",
   "prefer-stable": true,
   "require": {
-    "php": "^7.4 || ^8.0",
+    "php": "^8.1",
     "giggsey/libphonenumber-for-php": "^8.12",
     "google/recaptcha": "^1.2",
     "guzzlehttp/psr7": "^2.1",
     "league/container": "^4.2",
-    "panamax/panamax": "@stable",
+    "panamax/panamax": "dev-master",
     "psr/container": "^1.1 || ^2.0",
     "respect/validation": "^2.2",
-    "symfony/asset": "^5.4",
-    "symfony/polyfill-php80": "^1.23",
-    "symfony/polyfill-php81": "^1.23",
+    "symfony/asset": "^5.4 || ^6.0",
+    "symfony/polyfill-php82": "^1.23",
     "twig/inky-extra": "^3.4",
     "twig/intl-extra": "^3.4",
     "twig/markdown-extra": "^3.4",
     "twig/twig": "^3.4",
-    "webtheory/config": "@stable",
-    "webtheory/context": "@stable",
-    "webtheory/facade": "@stable",
-    "webtheory/html": "@stable",
-    "webtheory/saveyour": "@stable"
+    "unsplash/unsplash": "^3.2",
+    "webtheory/config": "dev-master",
+    "webtheory/context": "dev-master",
+    "webtheory/facade": "dev-master",
+    "webtheory/html": "dev-master",
+    "webtheory/saveyour": "dev-master",
+    "zoonman/pixabay-php-api": "^2.0"
   },
   "require-dev": {
     "composer/installers": "^1.0 || ^2.0",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.7.2 || ^1.0",
     "fakerphp/faker": "^1.17",
     "friendsofphp/php-cs-fixer": "^3.4",
     "joshtronic/php-loremipsum": "^2.1",
     "koodimonni/composer-dropin-installer": "^1.3",
-    "leonidas/leonidas": "@stable",
+    "leonidas/leonidas": "dev-master",
     "maximebf/debugbar": "^1.17",
-    "mockery/mockery": "^1.4",
+    "mockery/mockery": "^1.6",
     "nesbot/carbon": "^2.46",
     "oscarotero/env": "^2.1",
     "phpbench/phpbench": "@dev",
+    "phpcompatibility/phpcompatibility-wp": "^2.1",
+    "phpspec/prophecy-phpunit": "^2.0",
     "phpstan/extension-installer": "^1.1",
     "phpstan/phpstan": "^1.8",
     "phpunit/phpunit": "^9.5",
     "phpunit/phpunit-selenium": "^9.0",
     "psy/psysh": "^0.11",
-    "rector/rector": "^0.13.8",
+    "rector/rector": "^0.18.0",
     "roave/security-advisories": "dev-latest",
     "spatie/phpunit-watcher": "^1.12",
     "squizlabs/php_codesniffer": "^3.0",
-    "symfony/mailer": "^5.4",
+    "suin/phpcs-psr4-sniff": "^3.0",
+    "symfony/mailer": "^5.4 || ^6.0",
     "symfony/thanks": "^1.2",
     "szepeviktor/phpstan-wordpress": "^1.1",
-    "vimeo/psalm": "^4.7",
+    "vimeo/psalm": "^5.15",
     "vlucas/phpdotenv": "^5.3",
-    "webtheory/exterminate": "@stable",
-    "webtheory/wp-cli-util": "@stable",
-    "webtheory/wpdmc": "@stable",
-    "webtheory/wpunit": "@stable",
-    "wp-cli/wp-cli-bundle": "@stable"
+    "webtheory/exterminate": "dev-master",
+    "webtheory/path-builder": "dev-master",
+    "webtheory/playground": "dev-master",
+    "webtheory/unit-utils": "dev-master",
+    "webtheory/wp-cli-bundle": "dev-master",
+    "webtheory/wp-cli-util": "dev-master",
+    "webtheory/wp-link": "dev-master",
+    "webtheory/wpdmc": "dev-master",
+    "webtheory/wpunit": "dev-master"
   },
   "autoload": {
     "psr-4": {
@@ -98,9 +107,8 @@
     "fix": "vendor/bin/phpcbf",
     "hooks": "vendor/bin/captainhook",
     "inspect": "vendor/bin/psalm",
-    "link": "bin/symlink-theme",
-    "namespace": "composer dump-autoload -o",
-    "play": "php .playground/console.php",
+    "link": "vendor/bin/wp-link leonidas-theme theme",
+    "play": "php @playground/console.php",
     "refactor": "vendor/bin/rector process",
     "refactor:d": "@refactor --dry-run",
     "shell": "@wp shell",
@@ -114,23 +122,26 @@
     "wp": "vendor/bin/wp",
     "build": [
       "@asset run build",
-      "@namespace",
-      "@style",
+      "@check",
       "@analyze",
       "@inspect",
       "@test"
     ],
+    "build:fix": [
+      "@asset run fix",
+      "@style",
+      "@build"
+    ],
     "setup": [
       "composer install",
       "cp -n .env.example .env",
-      "bin/build-paths",
-      "bin/make-playground",
+      "vendor/bin/build-paths",
+      "vendor/bin/make-playground",
       "@wp:init"
     ],
     "style": [
       "vendor/bin/php-cs-fixer fix --verbose",
-      "vendor/bin/phpcbf",
-      "@check"
+      "vendor/bin/phpcbf"
     ],
     "test:all": [
       "@test:unit",
@@ -170,38 +181,52 @@
       "composer/package-versions-deprecated": true,
       "koodimonni/composer-dropin-installer": true,
       "symfony/thanks": true,
-      "phpstan/extension-installer": true
+      "phpstan/extension-installer": true,
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "extra": {
+    "installer-paths": {
+      "wordpress/wp-content/plugins/{$name}": [
+        "type:wordpress-plugin"
+      ],
+      "wordpress/wp-content/themes/{$name}/": [
+        "type:wordpress-theme"
+      ]
+    },
+    "dropin-paths": {
+      "wordpress/wp-content/mu-plugins": [
+        "type:wordpress-muplugin"
+      ],
+      "wordpress/wp-content/": [
+        "type:wordpress-dropin"
+      ]
+    },
     "build-paths": {
       "build": {
         "php-cs-fixer": {},
+        "phpcs": {},
         "phpstan": {},
         "phpunit": {},
         "psalm": {},
         "wordpress": {}
       },
-      "logs": {},
-      "temp": {}
+      "var": {
+        "cache": {},
+        "logs": {},
+        "temp": {}
+      }
     },
-    "dropin-paths": {
-      "wordpress/wp-content/": [],
-      "wordpress/wp-content/mu-plugins": []
-    },
-    "installer-paths": {
-      "wordpress/wp-content/plugins/{$name}": [
-        "type:wordpress-plugin"
+    "playground": {
+      "contexts": [
+        "console",
+        "browser",
+        "runtime",
+        "init",
+        "loaded"
       ],
-      "wordpress/wp-content/mu-plugins/{$name}/": [
-        "type:wordpress-muplugin"
-      ],
-      "wordpress/wp-content/themes/{$name}/": [
-        "type:wordpress-theme"
-      ],
-      "vendor/{$vendor}/{$name}/": [
-        "type:wordpress-dropin"
-      ]
+      "bootstrap": "tests/bootstrap.php",
+      "web-root": "wordpress"
     }
   }
 }
