--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -1,31 +1,47 @@
 <?xml version="1.0"?>
-<ruleset name="pseudo-theme">
-  <description>Coding standard for the Pseudo Theme WordPress theme</description>
-
-  <!-- File paths -->
-  <file>./app</file>
+<ruleset
+  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:noNamespaceSchemaLocation="vendor/squizlabs/php_codesniffer/phpcs.xsd"
+  name="app"
+>
+  <!-- Paths -->
+  <file>app</file>
+  <file>boot</file>
+  <file>config</file>
+  <file>theme</file>
+  <file>tests</file>
 
   <!-- Args -->
   <arg value="p"/>
   <arg value="s"/>
   <arg name="colors"/>
+  <arg name="basepath" value="."/>
+  <arg name="cache" value="build/phpcs/.cache"/>
+  <arg name="extensions" value="php"/>
+  <arg name="parallel" value="9001"/>
+  <arg name="report" value="code"/>
 
   <!-- Config -->
-  <config name="ignore_warnings_on_exit"
-    value="1"/>
+  <config name="ignore_warnings_on_exit" value="true"/>
+  <config name="testVersion" value="8.1-"/>
 
-  <config name="ignore_errors_on_exit"
-    value="1"/>
-
-  <config name="default_standard"
-    value="PSR12"/>
-
-  <!-- Use the PSR-12 Standard-->
+  <!-- Rules -->
   <rule ref="PSR12"/>
+  <rule ref="PHPCompatibilityWP"/>
+  <rule ref="Suin.Classes.PSR4"/>
 
-  <!-- Disable Default Squiz Checks -->
-  <rule ref="Squiz">
-    <exclude name="Squiz"/>
+  <!-- Disable underscore rules for "facade" classes -->
+  <rule ref="Squiz.Classes.ValidClassName.NotCamelCaps">
+    <exclude-pattern>app/Access/_Facade</exclude-pattern>
+  </rule>
+  <rule ref="PSR2.Methods.MethodDeclaration.Underscore">
+    <exclude-pattern>app/Access</exclude-pattern>
   </rule>
 
+  <!-- Disable camel case method name rule for tests -->
+  <rule ref="PSR1.Methods.CamelCapsMethodName">
+    <exclude-pattern>tests/Suites</exclude-pattern>
+    <exclude-pattern>tests/Support/Bases</exclude-pattern>
+    <exclude-pattern>tests/Support/Partials</exclude-pattern>
+  </rule>
 </ruleset>
