--- a/assets/package.json
+++ b/assets/package.json
@@ -2,93 +2,99 @@
   "private": true,
   "scripts": {
     "build": "npm run lint && npm run test && npm run mix:prod",
+    "debug.sass:admin": "sass src/admin/scss/main.scss build/sass/admin/main.scss",
+    "debug.sass:editor": "sass src/editor/scss/main.scss build/sass/editor/main.scss",
+    "debug.sass:theme": "sass src/theme/scss/main.scss build/sass/theme/main.scss",
+    "fix": "",
     "lint": "",
-    "test": "",
     "mix": "mix",
     "mix:prod": "mix --production",
     "nuke": "rm package-lock.json && rm -rf node_modules",
     "prettier": "npx prettier . --write --cache",
     "prettier:c": "npx prettier . --check --cache",
+    "test": "",
     "watch": "mix watch",
-    "watch:poll": "mix watch -- --watch-options-poll=1000",
     "watch:hot": "mix watch --hot",
-    "debug.sass:admin": "sass src/admin/scss/main.scss build/sass/admin/main.scss",
-    "debug.sass:editor": "sass src/editor/scss/main.scss build/sass/editor/main.scss",
-    "debug.sass:theme": "sass src/theme/scss/main.scss build/sass/theme/main.scss"
+    "watch:poll": "mix watch -- --watch-options-poll=1000"
   },
   "devDependencies": {
-    "@babel/cli": "^7.18.9",
-    "@babel/core": "^7.18.9",
-    "@babel/preset-env": "^7.18.9",
-    "@babel/register": "^7.18.9",
-    "@emotion/css": "11.9.0",
-    "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
-    "@vue/compiler-sfc": "3.2.37",
-    "@vue/runtime-dom": "3.2.37",
-    "babel-loader": "^8.2.5",
-    "browser-sync": "^2.27.10",
+    "@babel/cli": "^7.23.4",
+    "@babel/core": "^7.23.6",
+    "@babel/preset-env": "^7.23.6",
+    "@babel/register": "^7.22.15",
+    "@emotion/css": "11.11.2",
+    "@emotion/react": "11.11.3",
+    "@emotion/styled": "11.11.0",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
+    "@vue/compiler-sfc": "3.3.13",
+    "@vue/runtime-dom": "3.3.13",
+    "babel-loader": "^9.1.3",
+    "browser-sync": "^2.29.3",
     "browser-sync-webpack-plugin": "^2.3.0",
-    "css-loader": "^6.7.1",
-    "eslint": "^8",
+    "css-loader": "^6.8.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-jsdoc": "^46.9.1",
+    "eslint-plugin-vue": "^9.19.2",
     "image-size": "^1.0.2",
     "laravel-mix": "^6.0.49",
-    "prettier": "^2.7.1",
-    "postcss": "^8.4.14",
-    "postcss-import": "14.1.0",
-    "postcss-nested": "5.0.6",
-    "postcss-preset-env": "7.7.2",
-    "regenerator-runtime": "^0.13.9",
+    "postcss": "^8.4.32",
+    "postcss-import": "15.1.0",
+    "postcss-nested": "6.0.1",
+    "postcss-preset-env": "9.3.0",
+    "prettier": "^3.1.1",
+    "regenerator-runtime": "^0.14.1",
     "resolve-url-loader": "^5.0.0",
-    "sass": "^1.54.0",
-    "sass-loader": "^13.0.2",
-    "style-loader": "^3.3.1",
-    "typescript": "^4.7.4",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.9.3",
-    "yargs": "^17.5.1"
+    "sass": "^1.69.5",
+    "sass-loader": "^13.3.2",
+    "style-loader": "^3.3.3",
+    "stylelint": "^16.0.2",
+    "stylelint-config-standard": "^35.0.0",
+    "typescript": "^5.3.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "yargs": "^17.7.2"
   },
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
-    "@fortawesome/fontawesome-free": "^6.1.2",
-    "@glidejs/glide": "^3.5",
+    "@fortawesome/fontawesome-free": "^6.5.1",
+    "@glidejs/glide": "^3.6",
     "animate.css": "^4.1",
     "aos": "^2.3",
-    "axios": "^0.27.2",
+    "axios": "^1.6.2",
     "badger-accordion": "^1.2.4",
-    "bootstrap": "5.2",
-    "core-js": "^3.24.0",
+    "bootstrap": "5.3",
+    "core-js": "^3.34.0",
     "delete-empty": "^3.0.0",
     "flag-icon-css": "^3.4.2",
-    "fslightbox": "^3.3.1",
-    "gsap": "^3.10.4",
+    "fslightbox": "^3.4.1",
+    "gsap": "^3.12.4",
     "hammerjs": "^2.0.8",
-    "handy-collapse": "^1.0.4",
+    "handy-collapse": "^1.1.0",
     "imagesloaded": "^5.0.0",
-    "jquery": "^3.6.0",
-    "leaflet": "^1.8.0",
+    "jquery": "^3.7.1",
+    "leaflet": "^1.9.4",
     "loaders.css": "^0.1.2",
     "lodash": "^4.17.21",
     "magic.css": "^1.4",
     "masonry-layout": "^4.2.2",
-    "mediaelement": "^5.0.5",
-    "overlayscrollbars": "^1.13.3",
+    "mediaelement": "^7.0.2",
+    "overlayscrollbars": "^2.4.6",
     "owl.carousel": "^2.3.4",
     "parallax-js": "^3.1.0",
     "popper.js": "^1.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rellax": "^1.12.1",
-    "rfs": "^9.0.6",
+    "rfs": "^10.0.0",
     "scroll-out": "^2.2.12",
-    "simplebar": "^5.3.8",
+    "simplebar": "^6.2.5",
     "slideout": "^1.0.1",
     "sweetalert": "^2.1.2",
-    "swiper": "^8.3.1",
-    "tailwindcss": "3.1.6",
+    "swiper": "^11.0.5",
+    "tailwindcss": "3.4.0",
     "tooltip.js": "^1.3.3",
-    "vue": "3.2.37",
-    "wpapi": "^1.2.2"
+    "vue": "3.3.13"
   }
 }
