using `webtheory/erector` for scaffold customization

--- a/.env.example
+++ b/.env.example
@@ -30,5 +30,5 @@ VAR_DUMP_THEME=dark
 HOST_UID=1000
 HOST_GID=1000
 HOST_OS=LINUX
-HOST_PATH=~/code/packages/leonidas
+HOST_PATH=
 GUEST_PATH=/var/www/html
