--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,7 @@
     "szepeviktor/phpstan-wordpress": "^1.1",
     "vimeo/psalm": "^5.15",
     "vlucas/phpdotenv": "^5.3",
+    "webtheory/erector": "dev-master",
     "webtheory/exterminate": "dev-master",
     "webtheory/path-builder": "dev-master",
     "webtheory/playground": "dev-master",
